# CustomPyQt6Designer

./: .gitignore  LICENSE  README.md  pyproject.toml
demo_project/: README.md  main.py  requirements.txt
demo_project/ui/: main_window.ui
docs/: DESIGNER_PORTABLE.md  RUNTIME_INTEGRATION.md  WIDGET_API.md
examples/: monkez_widgets_test.ui
scripts/: build_full_designer.ps1
src/custom_pyqt6_designer/: __init__.py  exe_entry.py  gallery_app.py  launcher.py  plugin_info.py
src/custom_pyqt6_designer/designer_plugins/: __init__.py  _probe.py  monkez_arc_gauge_plugin.py  monkez_button_plugin.py  monkez_calendar_widget_plugin.py  monkez_checkbox_plugin.py  monkez_combobox_plugin.py  monkez_date_edit_plugin.py  monkez_date_time_edit_plugin.py  monkez_dial_plugin.py  monkez_double_spin_box_plugin.py  monkez_frame_plugin.py  monkez_group_box_plugin.py  monkez_image_plugin.py  monkez_lcd_number_plugin.py  monkez_linear_gauge_plugin.py  monkez_progress_bar_plugin.py  monkez_radial_gauge_plugin.py  monkez_radio_button_plugin.py  monkez_scroll_area_plugin.py  monkez_slider_plugin.py  monkez_spin_box_plugin.py  monkez_switch_plugin.py  monkez_text_input_plugin.py  monkez_time_edit_plugin.py  monkez_usb_camera_plugin.py  plugin_factory.py  plugin_groups.py  theme_task_menu.py
src/custom_pyqt6_designer/monkez_widgets/: __init__.py  app_branding.py  assets.py  designer_icons.py  fluent_api.py  monkez_button.py  monkez_checkbox.py  monkez_combobox.py  monkez_containers.py  monkez_datetime_widgets.py  monkez_display_widgets.py  monkez_gauges.py  monkez_image.py  monkez_progress_bar.py  monkez_radio_button.py  (+8 more)
tests/: test_demo_project.py  test_gallery_app.py  test_launcher.py  test_plugins.py  test_widgets.py
(+1 files in other folders)
